[gd_scene load_steps=141 format=3 uid="uid://dfvqrbc7yfp3e"]

[ext_resource type="Script" path="res://entities/mobs/players/warrior/warrior.gd" id="1_dwma1"]
[ext_resource type="Script" path="res://attributes/attribute.gd" id="2_acrq8"]
[ext_resource type="PackedScene" uid="uid://bhnl54yfhv2cl" path="res://components/commands/state/state_component.tscn" id="2_e5t7x"]
[ext_resource type="PackedScene" uid="uid://tovqio0ufan6" path="res://components/commands/velocity/velocity_component.tscn" id="2_ry1uk"]
[ext_resource type="PackedScene" uid="uid://ctexjtf10m8x2" path="res://components/commands/hitbox/hitbox_component.tscn" id="3_58ky6"]
[ext_resource type="Script" path="res://entities/mobs/players/warrior/states/idle.gd" id="3_un612"]
[ext_resource type="PackedScene" uid="uid://b23qvw2iygdut" path="res://components/commands/health/health_component.tscn" id="3_wj1h3"]
[ext_resource type="Script" path="res://attributes/generic.gd" id="3_ww4uv"]
[ext_resource type="Script" path="res://attributes/affinity.gd" id="4_kc31g"]
[ext_resource type="Script" path="res://entities/mobs/players/warrior/states/move.gd" id="4_lhxmr"]
[ext_resource type="PackedScene" uid="uid://c85a28w4mmbak" path="res://components/libraries/ability/ability_component.tscn" id="4_qstg1"]
[ext_resource type="Script" path="res://attributes/resistance.gd" id="5_078dv"]
[ext_resource type="Script" path="res://entities/mobs/players/warrior/states/attack.gd" id="5_vbqk7"]
[ext_resource type="PackedScene" uid="uid://651c5uaw2i5w" path="res://components/commands/stamina/stamina_component.tscn" id="12_edvht"]
[ext_resource type="Script" path="res://actions/numbers/providers/constant.gd" id="13_qljxc"]
[ext_resource type="Script" path="res://actions/entity/general/heal.gd" id="14_1n4lw"]
[ext_resource type="PackedScene" uid="uid://dcukp8busedys" path="res://components/libraries/action/action_component.tscn" id="14_j3m7g"]
[ext_resource type="PackedScene" uid="uid://dbr3mboxvngfv" path="res://components/libraries/inventory/inventory_component.tscn" id="14_mdvh5"]
[ext_resource type="Script" path="res://actions/vectors/operators/add.gd" id="16_6u2k5"]
[ext_resource type="Script" path="res://abilities/charged_ability.gd" id="16_ecg8s"]
[ext_resource type="Script" path="res://abilities/charge_level.gd" id="16_kbgua"]
[ext_resource type="Script" path="res://actions/vectors/providers/position.gd" id="17_fa87q"]
[ext_resource type="Script" path="res://actions/vectors/operators/multiply.gd" id="18_obar6"]
[ext_resource type="Script" path="res://actions/vectors/providers/constant.gd" id="19_ch1ae"]
[ext_resource type="PackedScene" uid="uid://yx0wxii8oigk" path="res://components/commands/interactor/interactor_component.tscn" id="20_rtrp4"]
[ext_resource type="Script" path="res://actions/vectors/providers/mouse_direction.gd" id="20_v6yld"]
[ext_resource type="Script" path="res://items/inventory.gd" id="21_oguyd"]
[ext_resource type="Script" path="res://actions/numbers/providers/range.gd" id="21_roh45"]
[ext_resource type="Script" path="res://actions/entity/general/damage_entity.gd" id="22_t8som"]
[ext_resource type="Script" path="res://items/slot.gd" id="22_uwmea"]
[ext_resource type="Script" path="res://actions/bientity/general/damage_bientity.gd" id="23_mjhuu"]
[ext_resource type="PackedScene" uid="uid://bop0ftormyju2" path="res://components/ui/hud/hud.tscn" id="24_8v6vb"]
[ext_resource type="Script" path="res://entities/mobs/players/ui/ui_handler.gd" id="24_iql77"]
[ext_resource type="Script" path="res://projectiles/objects/base_projectile.gd" id="24_tweln"]
[ext_resource type="Script" path="res://actions/entity/general/cast_projectile.gd" id="25_xtx7g"]
[ext_resource type="PackedScene" uid="uid://vskc5vqm3r7d" path="res://components/libraries/skill/skill_component.tscn" id="28_nfmj8"]
[ext_resource type="Script" path="res://skills/skill_tree.gd" id="29_uqb7t"]
[ext_resource type="Script" path="res://actions/bientity/stacking/stacking_target_bientity.gd" id="30_ilkdu"]
[ext_resource type="Script" path="res://skills/skill.gd" id="30_q706k"]
[ext_resource type="Script" path="res://actions/entity/stacking/stacking_generic_entity.gd" id="31_hnlfe"]
[ext_resource type="PackedScene" uid="uid://dhsd8as4dv5oa" path="res://components/ui/menu/Menu.tscn" id="36_kpxb1"]

[sub_resource type="Resource" id="Resource_eqsvv"]
script = ExtResource("2_acrq8")
raw_value = 100.0
multiplier_value = 1.0
min_value = -2.14748e+09
max_value = 2.14748e+09
modifiers = Array[Resource("res://attributes/attribute_modifier.gd")]([])

[sub_resource type="Resource" id="Resource_q3a8u"]
script = ExtResource("3_ww4uv")
health_max = SubResource("Resource_eqsvv")

[sub_resource type="Resource" id="Resource_8xuyt"]
script = ExtResource("4_kc31g")

[sub_resource type="Resource" id="Resource_mw36u"]
script = ExtResource("5_078dv")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ts4su"]
size = Vector2(40, 40)

[sub_resource type="Resource" id="Resource_afi7b"]
script = ExtResource("2_acrq8")
raw_value = 1.0
multiplier_value = 1.0
min_value = -2.14748e+09
max_value = 2.14748e+09
modifiers = Array[Resource("res://attributes/attribute_modifier.gd")]([])

[sub_resource type="Resource" id="Resource_ulxov"]
script = ExtResource("2_acrq8")
raw_value = 0.5
multiplier_value = 1.0
min_value = -2.14748e+09
max_value = 2.14748e+09
modifiers = Array[Resource("res://attributes/attribute_modifier.gd")]([])

[sub_resource type="Resource" id="Resource_wp6ar"]
script = ExtResource("2_acrq8")
raw_value = 0.5
multiplier_value = 1.0
min_value = -2.14748e+09
max_value = 2.14748e+09
modifiers = Array[Resource("res://attributes/attribute_modifier.gd")]([])

[sub_resource type="Resource" id="Resource_mxdme"]
script = ExtResource("13_qljxc")
constant = 0.0

[sub_resource type="Resource" id="Resource_wxp2f"]
script = ExtResource("14_1n4lw")
number = SubResource("Resource_mxdme")

[sub_resource type="Resource" id="Resource_j2k36"]
script = ExtResource("13_qljxc")
constant = 1.0

[sub_resource type="Resource" id="Resource_u7kxl"]
script = ExtResource("17_fa87q")

[sub_resource type="Resource" id="Resource_hrmvs"]
script = ExtResource("13_qljxc")
constant = 35.0

[sub_resource type="Resource" id="Resource_xcqed"]
script = ExtResource("13_qljxc")
constant = 35.0

[sub_resource type="Resource" id="Resource_i4dhp"]
script = ExtResource("19_ch1ae")
x = SubResource("Resource_hrmvs")
y = SubResource("Resource_xcqed")

[sub_resource type="Resource" id="Resource_7tr1f"]
script = ExtResource("20_v6yld")

[sub_resource type="Resource" id="Resource_xe772"]
script = ExtResource("18_obar6")
vector_a = SubResource("Resource_i4dhp")
vector_b = SubResource("Resource_7tr1f")

[sub_resource type="Resource" id="Resource_blqe5"]
script = ExtResource("16_6u2k5")
vector_a = SubResource("Resource_u7kxl")
vector_b = SubResource("Resource_xe772")

[sub_resource type="Resource" id="Resource_6pmxj"]
script = ExtResource("21_roh45")
number_min = 14.0
number_max = 22.0

[sub_resource type="Resource" id="Resource_uaxq0"]
script = ExtResource("22_t8som")
type = 0
amount = SubResource("Resource_6pmxj")

[sub_resource type="Resource" id="Resource_2jge2"]
script = ExtResource("23_mjhuu")
damage = SubResource("Resource_uaxq0")

[sub_resource type="Resource" id="Resource_r7hb0"]
script = ExtResource("20_v6yld")

[sub_resource type="Resource" id="Resource_5u2g6"]
script = ExtResource("13_qljxc")
constant = 0.05

[sub_resource type="Resource" id="Resource_r85q5"]
script = ExtResource("13_qljxc")
constant = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phnrb"]
size = Vector2(45, 75)

[sub_resource type="Resource" id="Resource_lvamg"]
script = ExtResource("24_tweln")
name = ""
pierce = 0
duration = SubResource("Resource_5u2g6")
direction = SubResource("Resource_r7hb0")
scale = SubResource("Resource_r85q5")
shape = SubResource("RectangleShape2D_phnrb")
actions_on_hurt = Array[Resource("res://actions/bientity/bientity_action.gd")]([SubResource("Resource_2jge2")])

[sub_resource type="Resource" id="Resource_jipp3"]
script = ExtResource("25_xtx7g")
projectile_object = SubResource("Resource_lvamg")
position = SubResource("Resource_blqe5")

[sub_resource type="Resource" id="Resource_qn5b5"]
script = ExtResource("13_qljxc")
constant = 25.0

[sub_resource type="Resource" id="Resource_cdkfp"]
script = ExtResource("16_kbgua")
cost = SubResource("Resource_qn5b5")
minimum_charge = 1.0
actions_on_cast = Array[Resource("res://actions/entity/entity_action.gd")]([SubResource("Resource_jipp3")])

[sub_resource type="Resource" id="Resource_rwkd1"]
script = ExtResource("17_fa87q")

[sub_resource type="Resource" id="Resource_3t020"]
script = ExtResource("13_qljxc")
constant = 30.0

[sub_resource type="Resource" id="Resource_g3wn0"]
script = ExtResource("13_qljxc")
constant = 30.0

[sub_resource type="Resource" id="Resource_o8ela"]
script = ExtResource("19_ch1ae")
x = SubResource("Resource_3t020")
y = SubResource("Resource_g3wn0")

[sub_resource type="Resource" id="Resource_uielm"]
script = ExtResource("20_v6yld")

[sub_resource type="Resource" id="Resource_ffyk8"]
script = ExtResource("18_obar6")
vector_a = SubResource("Resource_o8ela")
vector_b = SubResource("Resource_uielm")

[sub_resource type="Resource" id="Resource_4qple"]
script = ExtResource("16_6u2k5")
vector_a = SubResource("Resource_rwkd1")
vector_b = SubResource("Resource_ffyk8")

[sub_resource type="Resource" id="Resource_gb055"]
script = ExtResource("21_roh45")
number_min = 8.0
number_max = 14.0

[sub_resource type="Resource" id="Resource_dqyx0"]
script = ExtResource("22_t8som")
type = 0
amount = SubResource("Resource_gb055")

[sub_resource type="Resource" id="Resource_lid8t"]
script = ExtResource("23_mjhuu")
damage = SubResource("Resource_dqyx0")

[sub_resource type="Resource" id="Resource_i68ml"]
script = ExtResource("20_v6yld")

[sub_resource type="Resource" id="Resource_ux7tm"]
script = ExtResource("13_qljxc")
constant = 0.05

[sub_resource type="Resource" id="Resource_jj07m"]
script = ExtResource("13_qljxc")
constant = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5e6ww"]
size = Vector2(40, 65)

[sub_resource type="Resource" id="Resource_ekvmg"]
script = ExtResource("24_tweln")
name = ""
pierce = 0
duration = SubResource("Resource_ux7tm")
direction = SubResource("Resource_i68ml")
scale = SubResource("Resource_jj07m")
shape = SubResource("RectangleShape2D_5e6ww")
actions_on_hurt = Array[Resource("res://actions/bientity/bientity_action.gd")]([SubResource("Resource_lid8t")])

[sub_resource type="Resource" id="Resource_k40em"]
script = ExtResource("25_xtx7g")
projectile_object = SubResource("Resource_ekvmg")
position = SubResource("Resource_4qple")

[sub_resource type="Resource" id="Resource_wvbwj"]
script = ExtResource("13_qljxc")
constant = 30.0

[sub_resource type="Resource" id="Resource_lxlk7"]
script = ExtResource("16_kbgua")
cost = SubResource("Resource_wvbwj")
minimum_charge = 0.75
actions_on_cast = Array[Resource("res://actions/entity/entity_action.gd")]([SubResource("Resource_k40em")])

[sub_resource type="Resource" id="Resource_3jclu"]
script = ExtResource("17_fa87q")

[sub_resource type="Resource" id="Resource_bx3fp"]
script = ExtResource("13_qljxc")
constant = 35.0

[sub_resource type="Resource" id="Resource_1poo4"]
script = ExtResource("13_qljxc")
constant = 35.0

[sub_resource type="Resource" id="Resource_7dfjx"]
script = ExtResource("19_ch1ae")
x = SubResource("Resource_bx3fp")
y = SubResource("Resource_1poo4")

[sub_resource type="Resource" id="Resource_m24fp"]
script = ExtResource("20_v6yld")

[sub_resource type="Resource" id="Resource_0nqwg"]
script = ExtResource("18_obar6")
vector_a = SubResource("Resource_7dfjx")
vector_b = SubResource("Resource_m24fp")

[sub_resource type="Resource" id="Resource_tmv36"]
script = ExtResource("16_6u2k5")
vector_a = SubResource("Resource_3jclu")
vector_b = SubResource("Resource_0nqwg")

[sub_resource type="Resource" id="Resource_kvy7i"]
script = ExtResource("21_roh45")
number_min = 4.0
number_max = 8.0

[sub_resource type="Resource" id="Resource_i840b"]
script = ExtResource("22_t8som")
type = 0
amount = SubResource("Resource_kvy7i")

[sub_resource type="Resource" id="Resource_ktela"]
script = ExtResource("23_mjhuu")
damage = SubResource("Resource_i840b")

[sub_resource type="Resource" id="Resource_4f1tk"]
script = ExtResource("20_v6yld")

[sub_resource type="Resource" id="Resource_i4pyx"]
script = ExtResource("13_qljxc")
constant = 0.05

[sub_resource type="Resource" id="Resource_yu2e7"]
script = ExtResource("13_qljxc")
constant = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ep4pm"]
size = Vector2(35, 55)

[sub_resource type="Resource" id="Resource_hwvak"]
script = ExtResource("24_tweln")
name = ""
pierce = 0
duration = SubResource("Resource_i4pyx")
direction = SubResource("Resource_4f1tk")
scale = SubResource("Resource_yu2e7")
shape = SubResource("RectangleShape2D_ep4pm")
actions_on_hurt = Array[Resource("res://actions/bientity/bientity_action.gd")]([SubResource("Resource_ktela")])

[sub_resource type="Resource" id="Resource_1fjdb"]
script = ExtResource("25_xtx7g")
projectile_object = SubResource("Resource_hwvak")
position = SubResource("Resource_tmv36")

[sub_resource type="Resource" id="Resource_s63f1"]
script = ExtResource("13_qljxc")
constant = 40.0

[sub_resource type="Resource" id="Resource_77jw4"]
script = ExtResource("16_kbgua")
cost = SubResource("Resource_s63f1")
minimum_charge = 0.5
actions_on_cast = Array[Resource("res://actions/entity/entity_action.gd")]([SubResource("Resource_1fjdb")])

[sub_resource type="Resource" id="Resource_i7jsq"]
script = ExtResource("17_fa87q")

[sub_resource type="Resource" id="Resource_ag78x"]
script = ExtResource("13_qljxc")
constant = 35.0

[sub_resource type="Resource" id="Resource_bkvkt"]
script = ExtResource("13_qljxc")
constant = 35.0

[sub_resource type="Resource" id="Resource_fqtap"]
script = ExtResource("19_ch1ae")
x = SubResource("Resource_ag78x")
y = SubResource("Resource_bkvkt")

[sub_resource type="Resource" id="Resource_lg8xe"]
script = ExtResource("20_v6yld")

[sub_resource type="Resource" id="Resource_k3ogi"]
script = ExtResource("18_obar6")
vector_a = SubResource("Resource_fqtap")
vector_b = SubResource("Resource_lg8xe")

[sub_resource type="Resource" id="Resource_bupdk"]
script = ExtResource("16_6u2k5")
vector_a = SubResource("Resource_i7jsq")
vector_b = SubResource("Resource_k3ogi")

[sub_resource type="Resource" id="Resource_mlon5"]
script = ExtResource("21_roh45")
number_min = 2.0
number_max = 4.0

[sub_resource type="Resource" id="Resource_13hkh"]
script = ExtResource("22_t8som")
type = 0
amount = SubResource("Resource_mlon5")

[sub_resource type="Resource" id="Resource_qpljg"]
script = ExtResource("23_mjhuu")
damage = SubResource("Resource_13hkh")

[sub_resource type="Resource" id="Resource_ss0eu"]
script = ExtResource("20_v6yld")

[sub_resource type="Resource" id="Resource_gwm68"]
script = ExtResource("13_qljxc")
constant = 0.05

[sub_resource type="Resource" id="Resource_slrks"]
script = ExtResource("13_qljxc")
constant = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odn4u"]
size = Vector2(30, 45)

[sub_resource type="Resource" id="Resource_3np36"]
script = ExtResource("24_tweln")
name = ""
pierce = 0
duration = SubResource("Resource_gwm68")
direction = SubResource("Resource_ss0eu")
scale = SubResource("Resource_slrks")
shape = SubResource("RectangleShape2D_odn4u")
actions_on_hurt = Array[Resource("res://actions/bientity/bientity_action.gd")]([SubResource("Resource_qpljg")])

[sub_resource type="Resource" id="Resource_go5hi"]
script = ExtResource("25_xtx7g")
projectile_object = SubResource("Resource_3np36")
position = SubResource("Resource_bupdk")

[sub_resource type="Resource" id="Resource_rmx74"]
script = ExtResource("13_qljxc")
constant = 50.0

[sub_resource type="Resource" id="Resource_1ej5b"]
script = ExtResource("16_kbgua")
cost = SubResource("Resource_rmx74")
minimum_charge = 0.25
actions_on_cast = Array[Resource("res://actions/entity/entity_action.gd")]([SubResource("Resource_go5hi")])

[sub_resource type="Resource" id="Resource_hrjjh"]
script = ExtResource("13_qljxc")
constant = 25.0

[sub_resource type="Resource" id="Resource_5wqrs"]
script = ExtResource("13_qljxc")
constant = 1.0

[sub_resource type="Resource" id="Resource_nd7mp"]
script = ExtResource("16_ecg8s")
charge_levels = Array[ExtResource("16_kbgua")]([SubResource("Resource_cdkfp"), SubResource("Resource_lxlk7"), SubResource("Resource_77jw4"), SubResource("Resource_1ej5b")])
name = "Decapitate"
description = ""
reactive_energy = SubResource("Resource_hrjjh")
cast_time = SubResource("Resource_j2k36")
recharge_time = SubResource("Resource_5wqrs")
actions_on_start = Array[Resource("res://actions/entity/entity_action.gd")]([])

[sub_resource type="Resource" id="Resource_pabeh"]
script = ExtResource("31_hnlfe")
uid = ""
type = 4
operation = 1
value = 2.0

[sub_resource type="Resource" id="Resource_ele1f"]
script = ExtResource("30_ilkdu")
stacking_entity = SubResource("Resource_pabeh")

[sub_resource type="Resource" id="Resource_wjcm1"]
script = ExtResource("30_q706k")
name = "Chickpeas"
description = "Chickpeas make you go really really fast!"
max_stacks = 5
actions_per_stack = Array[Resource("res://actions/bientity/stacking/stacking_bientity_action.gd")]([SubResource("Resource_ele1f")])

[sub_resource type="Resource" id="Resource_nqfhd"]
script = ExtResource("29_uqb7t")
name = "Wabaloo"
color = Color(0.545098, 1, 0, 1)
skills = Array[ExtResource("30_q706k")]([null, SubResource("Resource_wjcm1"), null, null, null, null, null, null, null, null, null, null, null, null, null])

[sub_resource type="Resource" id="Resource_u34i7"]
script = ExtResource("22_uwmea")
item_type = 2
stack = 0
equipment_type = 2

[sub_resource type="Resource" id="Resource_pih7n"]
script = ExtResource("22_uwmea")
item_type = 2
stack = 0
equipment_type = 1

[sub_resource type="Resource" id="Resource_3t68r"]
script = ExtResource("22_uwmea")
item_type = 2
stack = 0
equipment_type = 0

[sub_resource type="Resource" id="Resource_0yhk7"]
script = ExtResource("22_uwmea")
item_type = 2
stack = 0
equipment_type = 3

[sub_resource type="Resource" id="Resource_wkh47"]
script = ExtResource("22_uwmea")
item_type = 1
stack = 0
equipment_type = 0

[sub_resource type="Resource" id="Resource_r1c1s"]
script = ExtResource("22_uwmea")
item_type = 1
stack = 0
equipment_type = 0

[sub_resource type="Resource" id="Resource_bia7r"]
script = ExtResource("21_oguyd")
slots = Array[ExtResource("22_uwmea")]([SubResource("Resource_u34i7"), SubResource("Resource_pih7n"), SubResource("Resource_3t68r"), SubResource("Resource_0yhk7"), SubResource("Resource_wkh47"), SubResource("Resource_r1c1s"), null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fktii"]
size = Vector2(40, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_ep403"]
radius = 50.0

[node name="Warrior" type="CharacterBody2D" node_paths=PackedStringArray("state_component", "interactor_component", "inventory_component", "ability_component", "attack_state", "stamina_component", "hitbox_component", "health_component", "velocity_component", "action_component")]
collision_layer = 4
collision_mask = 3
motion_mode = 1
script = ExtResource("1_dwma1")
state_component = NodePath("StateComponent")
interactor_component = NodePath("InteractorComponent")
inventory_component = NodePath("InventoryComponent")
ability_component = NodePath("AbilityComponent")
attack_state = NodePath("StateComponent/Attack")
stamina_component = NodePath("StaminaComponent")
hitbox_component = NodePath("HitboxComponent")
health_component = NodePath("HealthComponent")
id = "Warrior"
faction = 1
velocity_component = NodePath("VelocityComponent")
action_component = NodePath("ActionComponent")
generics = SubResource("Resource_q3a8u")
affinities = SubResource("Resource_8xuyt")
resistances = SubResource("Resource_mw36u")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ts4su")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="StateComponent" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("2_e5t7x")]
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateComponent" node_paths=PackedStringArray("color_rect", "move_state", "velocity_component", "ability_component")]
script = ExtResource("3_un612")
color_rect = NodePath("../../ColorRect")
move_state = NodePath("../Move")
velocity_component = NodePath("../../VelocityComponent")
ability_component = NodePath("../../AbilityComponent")

[node name="Move" type="Node" parent="StateComponent" node_paths=PackedStringArray("color_rect", "idle_state", "velocity_component", "ability_component")]
script = ExtResource("4_lhxmr")
color_rect = NodePath("../../ColorRect")
idle_state = NodePath("../Idle")
velocity_component = NodePath("../../VelocityComponent")
ability_component = NodePath("../../AbilityComponent")

[node name="Attack" type="Node" parent="StateComponent" node_paths=PackedStringArray("color_rect", "idle_state", "move_state", "velocity_component", "ability_component", "state_component")]
script = ExtResource("5_vbqk7")
color_rect = NodePath("../../ColorRect")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
velocity_component = NodePath("../../VelocityComponent")
ability_component = NodePath("../../AbilityComponent")
state_component = NodePath("..")

[node name="VelocityComponent" parent="." instance=ExtResource("2_ry1uk")]
control = SubResource("Resource_afi7b")
friction = SubResource("Resource_ulxov")

[node name="HealthComponent" parent="." instance=ExtResource("3_wj1h3")]

[node name="StaminaComponent" parent="." instance=ExtResource("12_edvht")]

[node name="ActionComponent" parent="." instance=ExtResource("14_j3m7g")]
target_on_hurt_scale = SubResource("Resource_wp6ar")
actions_on_died = Array[Resource("res://actions/entity/entity_action.gd")]([SubResource("Resource_wxp2f")])

[node name="AbilityComponent" parent="." instance=ExtResource("4_qstg1")]
abilities = Array[Resource("res://abilities/ability.gd")]([SubResource("Resource_nd7mp")])

[node name="SkillComponent" parent="." instance=ExtResource("28_nfmj8")]
skill_points = 10
skill_trees = Array[ExtResource("29_uqb7t")]([SubResource("Resource_nqfhd")])

[node name="InventoryComponent" parent="." instance=ExtResource("14_mdvh5")]
inventory = SubResource("Resource_bia7r")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("3_58ky6")]
entity = NodePath("..")
invulnerability_duration = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_fktii")
debug_color = Color(0.796078, 0.423529, 0, 0.419608)

[node name="InteractorComponent" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("20_rtrp4")]
entity = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractorComponent"]
shape = SubResource("CircleShape2D_ep403")
debug_color = Color(0.247059, 0.635294, 0, 0.0627451)

[node name="UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("hud", "menu")]
script = ExtResource("24_iql77")
hud = NodePath("Hud")
menu = NodePath("Menu")

[node name="Hud" parent="UI" node_paths=PackedStringArray("health", "stamina", "inventory", "action") instance=ExtResource("24_8v6vb")]
health = NodePath("../../HealthComponent")
stamina = NodePath("../../StaminaComponent")
inventory = NodePath("../../InventoryComponent")
action = NodePath("../../ActionComponent")

[node name="Menu" parent="UI" instance=ExtResource("36_kpxb1")]
visible = false

[node name="InventoryMenu" parent="UI/Menu/MarginContainer/TabContainer" index="1" node_paths=PackedStringArray("inventory_component", "entity")]
inventory_component = NodePath("../../../../../InventoryComponent")
entity = NodePath("../../../../..")

[node name="SkillMenu" parent="UI/Menu/MarginContainer/TabContainer" index="2" node_paths=PackedStringArray("skill_component", "entity")]
skill_component = NodePath("../../../../../SkillComponent")
entity = NodePath("../../../../..")

[connection signal="interactables_updated" from="InteractorComponent" to="." method="_on_interactor_component_interactables_updated"]

[editable path="UI/Menu"]
